# bitsgap_test

./: .gitignore  Cargo.toml  README.md  musings.md  rustfmt.toml
poloniex/: Cargo.toml
poloniex/src/: candles.rs  context.rs  lib.rs  units.rs
poloniex/src/rest/: candles.rs  intervals.rs  mod.rs
poloniex/src/ws/: candles.rs  channels.rs  intervals.rs  mod.rs  protocol.rs  trades.rs
scraper/: Cargo.toml
scraper/src/: download.rs  main.rs  storage.rs  stream.rs
shared/: Cargo.toml
shared/src/: auth.rs  interval.rs  kline.rs  lib.rs  ws.rs
shared/src/records/: mod.rs  recent_trade.rs
shared/src/utils/: mod.rs  sorted_vec.rs  time.rs  url.rs
