[workspace]
resolver = "2"
members = ["shared", "poloniex", "scraper"]

[workspace.dependencies]
bitsgap_shared = { path = "./shared" }
bitsgap_poloniex = { path = "./poloniex" }

anyhow = "1"
arrayvec = "0.7"
base64 = "0.22"
equivalent = "1"
form_urlencoded = "1"
hmac = "0.12"
let_clone = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde = "1"
serde_json = "1"
sha2 = "0.10"
smallstr = "0.3"
tokio = "1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = "2"
