[package]
name = "bitsgap_poloniex"
authors = ["bitsgap.com", "qthree <qthree3@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
bitsgap_shared.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json.workspace = true
