[package]
name = "bitsgap_poloniex"
authors = ["bitsgap.com", "qthree <qthree3@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
bitsgap_shared.workspace = true
futures.workspace = true
let_clone.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
env_logger.workspace = true
