[package]
name = "bitsgap_shared"
authors = ["bitsgap.com", "qthree <qthree3@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
base64.workspace = true
form_urlencoded.workspace = true
hmac.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
