[package]
name = "bitsgap_shared"
authors = ["bitsgap.com", "qthree <qthree3@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
base64.workspace = true
equivalent.workspace = true
form_urlencoded.workspace = true
futures.workspace = true
jiff.workspace = true
hmac.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
smallstr.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
